replicated mac os window behaviour